examples/type_system/failing/165_self_recursive_precision_prefers_e300.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/165_self_recursive_precision_prefers_e300.flx
// error[E300]: Annotation Type Mismatch
//
// The value of `x` does not match its type annotation.
//
//   examples/type_system/failing/165_self_recursive_precision_prefers_e300.flx:36:21
//    |
// 36 |     let x: String = loop_back(3)
//    |                     ^^^^^^^^^^^^
//    |                     ------------ this value has type `Int`
//
//    |            ------ but `x` was annotated as `String`
//
// Note:
//   annotated type: String
//   value type: Int
//
// Help:
//   Try `to_string(...)` to convert a `Int` into a `String`.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn loop_back(n) {
    if n == 0 {
        0
    } else {
        loop_back(n - 1)
    }
}

fn main() -> Unit {
    let x: String = loop_back(3)
}
